XMLtoCSV/objects/unpackaged/objects/Territory_Budget_Transaction_vod__c.object
<CustomObject>
    <description>A transaction that relates to a specific budget.</description>
    <fields>
        <fullName>Description_vod__c</fullName>
        <description>This field can be used for a more detailed description of the Transaction</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quantity_vod__c</fullName>
        <description>Quantity of transaction</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Territory_Budget_vod__c</fullName>
        <description>The budget to which the transaction is related to</description>
        <label>Territory Budget</label>
        <referenceTo>Territory_Budget_vod__c</referenceTo>
        <relationshipLabel>Territory Budget Transactions</relationshipLabel>
        <relationshipName>Territory_Budget_Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Transaction_Date_vod__c</fullName>
        <description>Set when a transaction record is created</description>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Value_vod__c</fullName>
        <description>Value of transaction</description>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Territory Budget Transaction</label>
    <nameField>
        <displayFormat>TBT-{0000000}</displayFormat>
        <label>Territory Budget Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Budget Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>VEEVA_ACTIVE_BUDGET_CHECK</fullName>
        <active>true</active>
        <description>This validation rule will ensure that a budget transaction can only be created for an active budget.</description>
        <errorConditionFormula>Territory_Budget_vod__r.Active_vod__c  = false</errorConditionFormula>
        <errorMessage>Cannot create transaction for inactive budget</errorMessage>
    </validationRules>
</CustomObject>